src/App.css
@import url('https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css');

img {
    max-width: 100%;
    height: auto;
}

.staticBGold {
  background-image: linear-gradient(rgb(27, 26, 26), black);
  height: auto;
}

.staticBG {
  background: url("assets/topbar.png") center no-repeat;
  height: auto;
}

.Homepage {
  background-color: rgb(31, 31, 31);
  text-align: center;
}

.header-row {
  display: inherit !important;
}

.banner {
  position: relative;
  border: 0 !important;
}

body {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji" !important;
  -webkit-font-smoothing: antialiased;
  line-height: 1.5 !important;
  background-color: rgb(1, 1, 1) !important;
  overflow-y: scroll;
  -webkit-overflow-scrolling: touch;
}

.overlay {
  position: absolute;
  bottom: 0px;
  padding: 5px;
  opacity: .75;
  width: 100%;
  height: 12%;
}

.overlayText {
  position: absolute;
  bottom: 4%;
  left: 20px;
  padding: 5px;
  font-family: Roboto-Black;
  font-size: 1.5vw;
  color: white;
}

.bannerimg {
  object-fit: contain;
  height: auto;
  width: 100%;
  border: 2px solid black;
}

.navbar-all {
  padding: .55rem 1rem !important;
  z-index: 1;
  width: 100%;
  border: 0 !important;
  border-bottom: 1px solid black;
}

.bg-nav {
  background-color: rgba(22,22,22,0.9)!important;
  border-bottom: 3px solid black;
}

.logobox {
  width: 75%;
  float: left;
}

.logo {
  max-width: 40% !important;
  min-width: 300px;
}

.loginbox {
  width: 25%;
  float: right;
}

.App-header {
  padding: 20px;
  position: relative;
  width: 100%;
}

.App-title {
  font-size: 1.5em;
}

.App-intro {
  font-size: large;
}

.pagePlaceholder {
  color:white;
  text-align: center;
}


.form-box {
  color:white;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: grey;
  border-radius: 5px;
}

.test {
  text-align: center;
}

.profile-style {
  color: white;
}

.imgUpload {
  text-align: center;
}

.imgUpload-text {
  color: white;
}

.imgUpload-submit {
  margin-top: 10px;
}

.imgUpload-input {
  background-color: grey;
  text-align: left;
  border-radius: 5px;
}

.img-upload-col-button {
  max-width: 380px !important;
  justify-content: flex-end;
  display: flex;
}

.notice-col-settings {
  max-width: 380px !important;
  justify-content: center;
  display: flex;
}

.pdfStyle {
  text-align: center;
  color: white;
}
.mapStyle {
  text-align: center;
  color: white;
}
.logout {
  justify-content: center;
  margin-right: 0 !important;
  margin-left: 0 !important;
}

.login {
  justify-content: center;
}

.welcome {
  color:white;
  margin-bottom: 4px;
  text-align: center;
}

.pdfFile {
  display: flex;
  justify-content: center;
  align-items: center;
}

.recap {
    display: flex;
    justify-content: center;
    align-items: center;
    padding-bottom: 30px;
}

.forgotP {
  color: white;
  text-align: center;
  padding-bottom: 10px;
}

.input-group-forgot-pass {
  padding-bottom: 10px;
}

.forgotPass {
  padding-top: 10px;
  text-align: end;
}

.team-rows {
  display: inline-block;
  margin-bottom: 0;
  margin-top: 0;
}

.team-rows-icons {
  font-size: 1.4em !important;
  display: inline-block;
}

.team-name {
  vertical-align: middle !important;
  color: white !important;
  font-size: .6rem;
  text-align: center;
}

.link-team-name {
  vertical-align: middle !important;
  color: white !important;
  text-align: center;
}

.team-info {
  justify-content: center;
  align-items: center;
}

.profile-link {
  color: white;
}

.team-icon-individual {
  border: 1px solid grey;
}

.team-single-img {
  justify-content: center;
  align-items: center;
  display: flex;
}

.padding-2px {
  padding: 2px;
}

.team-icon-teamspage {
  position: relative;
  min-width: 100%;
  height: auto;
  margin-top: 30px;
  margin-bottom: 30px;
  border: 1px solid grey;
}

.description-teamspage {
  text-align: center;
  width: 80%;
}

.description-row-teamspage {
  margin-right: 0px !important;
  margin-left: 0px !important;
  justify-content: center;
}

.members-row-teamspage {
  margin-right: 0px !important;
  margin-left: 0px !important;
  border-radius: 5px;
  justify-content: center;
  margin-bottom: 30px;
}

.members-textbox-teamspage {
  text-align: center;
  color: black;
  border-radius: 5px;
  background-color: white;
  width: 80%;
  margin-left: 15px;
  margin-right: 15px;
}

.header-profile {
  color: white;
}

.left-column-profile {
  margin-top: 0px;
}

.team-members-box {
  margin-bottom: 30px;
  padding: 5px;
}

.team-manage-text {
  color: white;
}

.team-manage-blank {
  color: white;
  align-items: center;
  justify-content: center;
  text-align: center;
}

.team-manage-button {
  margin-top: 10px;
}

.team-manage-button-2 {
  margin-top: 10px;
  margin-left: 5px;
}

.page-header {
  font-size: 1.5rem;
  color:white;
  text-align: center;
  padding-top: 10px;
  padding-bottom: 10px;
}

.team-link {
  align-items: center;
  justify-content: center;
  color: black;
}

.team-member-list {
  text-align: center;
  width: 80%;
}

.team-upload {
  color:white !important;
}

.progress {
  width: 100%;
}

.upload-button {
  margin-top: 10px;
}

.team-pictures {
  border: 1px solid black;
}

.team-upload-warning {
  margin-top: 10px;
  margin-left: 10px;
  color: white;
}

.team-upload-text {
  color:white !important;
  margin-bottom: 10px !important;
  padding-top: 10px !important;
}

.next-button {
  margin-top: 10px;
}

.previous-button {
  margin-top: 10px;
}

.submit-button {
  margin-top: 10px;
  margin-left: 15px;
}

.error-team-create {
  color: red;
}

.wins-lb {
  color: rgb(118, 251, 0);
}

.losses-lb {
  color: #fb6060;
}
.myprofilelink-lb:link {
  color: gold;
}

.myprofilelink-lb:visited {
  color: gold;
}

.profilelink-lb:link {
  color: white;
}

.profilelink-lb:visited {
  color: white;
}

.profilelink-tm:link {
  color: black;
}
/* ... */

